# hnbrief

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  mise.toml  pyproject.toml
.github/workflows/: python_test.yaml
src/hnbrief/: __init__.py  cli.py  config.py  worker.py
src/hnbrief/activities/: __init__.py  hackernews.py  openai.py
src/hnbrief/clients/: __init__.py  hackernews.py  openai.py
src/hnbrief/prompts/: daily_brief.poml  story_summary.poml
src/hnbrief/workflows/: hackernews.py
tests/: __init__.py  test_config.py
tests/test_clients/: test_hackernews_client.py  test_openai_client.py
tests/test_workflows/: test_hackernews.py
